[package]
name = "tunnel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
boringtun = { version = "0.6.0", features = ["device"] }
env_logger = "0.11.8"
etherparse = "0.19.0"
log = "0.4.28"
rand_core = "0.6.4"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "time"] }
