[package]
name = "tunnel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-recursion = "1.1.1"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
confy = "2.0.0"
env_logger = "0.11.8"
etherparse = "0.19.0"
features = "0.10.0"
futures = "0.3.31"
libp2p = { version = "0.56.0", features = ["ed25519", "gossipsub", "identify", "json", "kad", "macros", "noise", "ping", "quic", "request-response", "serde", "tcp", "tokio", "yamux"] }
libp2p-identity = { version = "0.2.12", features = ["ed25519", "serde"] }
log = "0.4.28"
rand_core = "0.6.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.17"
